--- a/project.html/Project2.css
+++ b/project.html/Project2.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
     margin: 0;
@@ -110,8 +110,8 @@ body {
  /* .person-img
 {
 width: 400px;
-border-radius: 1000px;
-} */
+border-radius: 1000px; */
+}
 .Services {
     width: 100%;
     padding: 60px 5%;
